# ChangeLog for net-wireless/bluez-gnome
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-gnome/ChangeLog,v 1.27 2008/02/10 15:49:50 eva Exp $

*bluez-gnome-0.18 (10 Feb 2008)

  10 Feb 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +bluez-gnome-0.18.ebuild:
  bump to 0.18, re-add ~amd64 wrt #209224

  10 Feb 2008; Petteri Räty <betelgeuse@gentoo.org>
  bluez-gnome-0.17.ebuild:
  Move gnome-vfs-obexftp to PDEPEND to avoid circular deps.

  09 Feb 2008; Petteri Räty <betelgeuse@gentoo.org>
  bluez-gnome-0.15-r1.ebuild, bluez-gnome-0.16.ebuild,
  bluez-gnome-0.17.ebuild:
  Remove x11-proto/xproto from RDEPEND. Fixes bug #209451.

  08 Feb 2008; Raúl Porcel <armin76@gentoo.org> bluez-gnome-0.17.ebuild:
  Re-add ~sparc wrt #209224

  08 Feb 2008; Petteri Räty <betelgeuse@gentoo.org>
  bluez-gnome-0.17.ebuild:
  Add gnome use flag to pull in nautilus and gnome-vfs-obexftp for Browse
  Device...

*bluez-gnome-0.17 (07 Feb 2008)

  07 Feb 2008; Petteri Räty <betelgeuse@gentoo.org>
  +bluez-gnome-0.17.ebuild:
  Version bump. Dropped all but ~x86 until arches keyword
  app-mobilephone/obex-data-server.

  06 Feb 2008; Petteri Räty <betelgeuse@gentoo.org>
  bluez-gnome-0.16.ebuild:
  Add note that sending files is broken until obex-data-server is packaged.

*bluez-gnome-0.16 (06 Feb 2008)

  06 Feb 2008; Petteri Räty <betelgeuse@gentoo.org>
  +bluez-gnome-0.16.ebuild:
  Version bump.

  06 Feb 2008; Petteri Räty <betelgeuse@gentoo.org>
  -bluez-gnome-0.13.ebuild, -bluez-gnome-0.14.ebuild,
  -bluez-gnome-0.15.ebuild:
  Remove old versions.

*bluez-gnome-0.15-r1 (03 Feb 2008)

  03 Feb 2008; Petteri Räty <betelgeuse@gentoo.org>
  +bluez-gnome-0.15-r1.ebuild:
  Make hal and libnotify mandatory again as upstream doesn't support disabling
  them. Add pkgconfig to DEPEND. Fixes bug #206451.

  03 Feb 2008; Petteri Räty <betelgeuse@gentoo.org> metadata.xml:
  Remove the pda herd from metadata.xml.
