@@ -7,16 +7,18 @@ DIST bluez-gnome-0.15.tar.gz 297730 RMD160 131efb39b6f317824d9f52e01e0af4cbb274d
 DIST bluez-gnome-0.16.tar.gz 305099 RMD160 acf791ae223ee19f2e1690efad55147208413de9 SHA1 cc69e0c33ea97234a2ac9137756feb69cdc1f54c SHA256 bb50f0c233380e77624df9d30688df486305d573d6de4c596fd9fdd26cad2607
 DIST bluez-gnome-0.17.tar.gz 305541 RMD160 fd98fc16c7d760e62501c4f4e44345d2a670f638 SHA1 673a18d82e41de9733a86a9bcc838b6ceb9adca0 SHA256 82c4ee8157f645e5d5dee5c29cb7c269ccc8786ae700490d26b2cd1970a3c756
 DIST bluez-gnome-0.18.tar.gz 306619 RMD160 05b0a7ef412325a64df21126a038962134cab079 SHA1 8e9970d6f533e876ac9c0c2a2782c6bec1204b20 SHA256 f43e07859400639ac75617968ad569a7dade5931b59c99f8f7e4324c3ed50289
+DIST bluez-gnome-0.23.tar.gz 370688 RMD160 210e1c95facf643a563b1d111351a7c7396b1bf9 SHA1 d7c6ab848531c2e5d50fe391e7ebd6c67f582007 SHA256 176ce7e63769fd9ccc32e2987e2808acaeb3ff242b2f7ced5dfa025f1f336bef
 EBUILD bluez-gnome-0.15-r1.ebuild 829 RMD160 5b0a67f8a97cce1af336e8a0a6d13f256a4d5f86 SHA1 ac1fb99a724505f9732d90349d2d3fd6073b90bf SHA256 39744f23864f9e0681ca52ed6e3a8fd00886643e6d795cf13681bd4b605fabb5
 EBUILD bluez-gnome-0.16.ebuild 956 RMD160 f2167f3decfe61995f3f5fd0e45e66ccf7adc070 SHA1 3d8f8c57bb81652a9eacdd8a88070c8ea1c3f137 SHA256 8ebcc8042e23a183011bf943bbe077a9c06840bc6794aeb13dccd29725d31a9b
-EBUILD bluez-gnome-0.17.ebuild 1354 RMD160 38501ebfc9b514adaedec756e8469a84fe822905 SHA1 b4a152759a01f5d191d21e88d371559f48c09bfb SHA256 10c46613bdada08956568f4324cd55ce4433f89bfa7284f02c8f8ea6ecaef1cb
-EBUILD bluez-gnome-0.18.ebuild 1354 RMD160 398cff083ab9ca9a86a9121060aff7a2f57ee92c SHA1 722858812a716867fb2cd79082752c7b9244c72b SHA256 4a74bdba6f313b1c9b351223384db22b079f888800634ee790326a13b7b53c82
-MISC ChangeLog 4385 RMD160 c16334690738017a61ee10a93e8a5697e1a17404 SHA1 3db6706f18fa039f34cfb3c133f41441dbadb3ad SHA256 4ac3a2bed08831b4b0db49ebcf5f047124f21d67fbb1a12da82f2a17e81c1618
+EBUILD bluez-gnome-0.17.ebuild 1359 RMD160 b8b84cbf2b6e23ac1f3e0d7799eba4e886dd568c SHA1 d5bb134ea9a2c4f6554ee24f736bca97b95e8d5b SHA256 9583ac4ff068909a6b98b50f036654468fce21ad2ff4193f772f36547078abc2
+EBUILD bluez-gnome-0.18.ebuild 1366 RMD160 646c7b0bca321ad48b8e9fc487ff7b37dc513046 SHA1 a6d48c9da22a84ef00882be504c5066b7310e3e6 SHA256 213770e1140fdbb5e5ab2cd6b5a78a985884e3f6c101694654a2639cd8ee3ea7
+EBUILD bluez-gnome-0.23.ebuild 1391 RMD160 22ffddb1a44dffe076d4292e06d615dff04a8ec0 SHA1 450b6520fd5a462458cc76c0ac63898330dc9851 SHA256 3ab2426f2bf2be06bf47ab8ca1e2328199c1deb57673630a60a23967c7689be4
+MISC ChangeLog 4650 RMD160 be80235204b7da15c9055568b2d4ac77a692bf79 SHA1 34ddc556232179a5e86bf122ffb7c907b5ee190f SHA256 ed5f02feeca0f76e7a602991bc370b938945f62e1a0366804fe967d904efc85d
 MISC metadata.xml 361 RMD160 b4ab567720842e9caee09a01d805a8d754f89b04 SHA1 9d61f8d709db6eb6aaf856ddf3f7333611a67cf3 SHA256 cee3bf308e1f2c6d3012b47203144f0c7574c5400f4209386dfcc80ca812af28
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFHrx0o1fmVwcYIWAYRAm2fAJ4i1Hg+m1GfzBlMAv09xbO1zPGgvQCgxC9m
-ptaeh33t7pwEEanBbtQX50E=
-=vY8m
+iD8DBQFHxDj/cxLzpIGCsLQRAttzAJsH4g3IFSK3reUsEbTIm6WQFJmb8ACfVqiq
+77RUZaAg/r1ZhZhQnez1vFM=
+=vUaW
 -----END PGP SIGNATURE-----
