@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-gnome/bluez-gnome-0.17.ebuild,v 1.6 2008/02/10 14:00:14 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-gnome/bluez-gnome-0.17.ebuild,v 1.7 2008/02/26 16:06:18 betelgeuse Exp $
 
 inherit gnome2
 
@@ -27,7 +27,7 @@ DEPEND="
 
 RDEPEND="=net-wireless/bluez-utils-3*
 	gnome? ( gnome-base/nautilus )
-	app-mobilephone/obex-data-server
+	~app-mobilephone/obex-data-server-0.1
 	${COMMON_DEPEND}"
 
 PDEPEND="gnome? ( gnome-extra/gnome-vfs-obexftp )"
